--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="assets/logo.svg" alt="logo of the website" class="logo" />
       <h1>[ADD PAGE TITLE]</h1>
     </div>
-    <a class="btn" href="https://docs.google.com/forms/u/1/d/e/1FAIpQLSd-2SAtuNmLysyr_SS41rxinLnzGHSnVZqLqWAVg9HCSg-_jw/viewform" target="_blank">Add a Resource</a>
+    <a class="btn" href="https://YOUR-GOOGLE-FORM-URL.com/" target="_blank">Add a Resource</a>
   </header>
 
   <div class="container">
@@ -26,7 +26,7 @@
       </ul>
 
       <div class="copyright">
-        <p>Website created and maintained by <a href="https://YOURURLHERE.com/" target="_blank">YOUR NAME HERE</a>.</p>
+        <p>Website created and maintained by <a href="https://YOUR-WEBSITE-HERE.com/" target="_blank">YOUR NAME HERE</a>.</p>
 
         <p>This website was inspired from <a href="https://www.ethicaldesignresources.com/" target="_blank">Ethical Design Resources</a> by Lexi Namer.</p>
         <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script></p>
